<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/fra_login_pic_and_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fra_login_text"
            android:layout_width="108dp"
            android:layout_height="26dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/font_color_main"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/fra_login_puc"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/fra_login_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@mipmap/login_pic"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fra_login_username"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@id/fra_login_pic_and_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/font_color_main"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_fra_login_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/input_username"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fra_login_password"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@id/fra_login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/font_color_main"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_fra_login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/input_password"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fra_login_check"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@id/fra_login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/check_number"
            android:textColor="@color/font_color_main"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_fra_login_check_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/press_button_to_change"
                android:textSize="21sp" />

            <Button
                android:text="@string/check_number"
                android:id="@+id/fra_login_get_check"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_btn_fra_login"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@mipmap/btn_login" />

    <Button
        android:id="@+id/btn_fra_register"
        android:textColor="@color/font_color_main"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/register_new_one"
        android:textSize="15sp" />
</RelativeLayout>
